--- a/app/src/main/res/menu/menu_hit__timer.xml
+++ b/app/src/main/res/menu/menu_hit__timer.xml
@@ -1,3 +1,4 @@
+<!--todo:convert to menus-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".HIT_Timer">
