--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -15,6 +15,7 @@
             android:title="@string/athleteName_title"
             android:summary="@string/athleteName_summary"
             android:dialogTitle="@string/athleteName_dialogue"
+            android:defaultValue="Your Name"
             />
     </PreferenceCategory>
 
