Rationalise strings & more Spanish

--- a/app/src/main/res/layout-land/activity_hit__timer.xml
+++ b/app/src/main/res/layout-land/activity_hit__timer.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/btnStartTimer"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/startTimerButtonText"
+                android:text="@string/Start_Timer"
                 android:onClick="btnStartTimer_Click"
                 />
             <com.google.android.gms.ads.AdView
