--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/imgFlLogo"
-        android:contentDescription="@string/splash_contentDescription"
+        android:contentDescription="@string/FL_Logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
